<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="wrap_content" android:orientation="vertical" app:layout_goneMarginStart="10dp"
              app:layout_goneMarginTop="10dp" app:layout_goneMarginRight="10dp" app:layout_goneMarginLeft="10dp"
              app:layout_goneMarginEnd="10dp" app:layout_goneMarginBottom="10dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:orientation="vertical"
                      android:layout_height="wrap_content" android:padding="15dp" android:paddingEnd="25dp"
                      android:paddingStart="25dp">

            <Switch
                    android:text="@string/enableTimeLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/enable_time_limit_switch"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="10dp"
                    android:id="@+id/time_limit_adv_settings">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/TimeLimitValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView3"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="1"
                                android:id="@+id/time_txtbox" android:layout_weight="1"/>
                        <TextView
                                android:text="@string/minutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/textView4"
                                android:layout_weight="1"/>
                    </LinearLayout>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/clean_time_meaner_label"
                            android:layout_weight="1"/>
                    <CheckBox
                            android:text="@string/allowEndVideo_chckbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/allow_video_to_end_chckbox"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
