<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout         xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
                      android:orientation="vertical"
             tools:context=".licenseAgreement">


    <ImageView
            android:src="@drawable/nogatetext"
            android:layout_width="match_parent"
            android:layout_height="92dp" android:id="@+id/imageView2" android:layout_weight="1"
            android:layout_alignParentStart="true" android:layout_alignParentTop="true"
            android:layout_marginTop="28dp" android:layout_marginEnd="10dp" android:layout_marginStart="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:text="@string/first_opening_warning"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1" android:textColor="@android:color/background_light"
            android:textAlignment="center" android:layout_height="119dp" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="138dp" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" android:layout_alignParentStart="true" android:layout_alignParentTop="true"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:layout_marginRight="30dp"
                android:id="@+id/license_agree"
                android:onClick="agree_lcs"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/license_disagree"
                android:onClick="cancel_lcs"
        />
    </LinearLayout>
</RelativeLayout>